tests/ui/eii/error_statement_position.stderr
error: `#[eii]` is only valid on functions
  --> $DIR/error_statement_position.rs:13:5
   |
LL |     #[eii]
   |     ^^^^^^

error: aborting due to 1 previous error

